--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Boghandleren</title>
 </head>
 <body>
-
+Test
     <!-- Font Awesome Icon Script  -->
     <script src="https://kit.fontawesome.com/3ae7ff667f.js"></script>
 </body>
