--- a/index.html
+++ b/index.html
@@ -12,7 +12,38 @@
     <title>Boghandleren</title>
 </head>
 <body>
-Test
+    <header class="header__">
+        <nav class="header__nav-">
+            <ul class="header__nav-menu">
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Om Boghandleren</a>
+                </li>
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Bogklubben</a>
+                <ul class="header__nav-menu-item-dropdown">
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Nyheder</a></li>
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Arragementer</a></li>
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Månedens bog</a></li>
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Bog tips</a></li>
+                </ul>
+                </li>
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Akutuelt</a>
+                <ul class="header__nav-menu-item-dropdown">
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Skøn litteratur</a></li>
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Fag litteratur</a></li>
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Børn og unge</a></li>
+                </ul>
+                </li>
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Tilmelding</a>
+                
+                </li>
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Lånebørsen</a>
+                <ul class="header__nav-menu-item-dropdown">
+                    <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Kontakt</a></li>
+                </ul>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
     <!-- Font Awesome Icon Script  -->
     <script src="https://kit.fontawesome.com/3ae7ff667f.js"></script>
 </body>
