--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Boghandleren</title>
 </head>
 <body>
-    <header class="header__">
-        <nav class="header__nav-">
+    <header class="header">
+        <nav class="__header__nav-">
             <ul class="header__nav-menu">
                 <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Om Boghandleren</a>
                 </li>
