--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header class="header">
-        <nav class="__header__nav-">
+        <nav class="header__nav">
             <ul class="header__nav-menu">
                 <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Om Boghandleren</a>
                 </li>
-                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Bogklubben</a>
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Bogklubben<i class="fas fa-chevron-down"></i></a>
                 <ul class="header__nav-menu-item-dropdown">
                     <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Nyheder</a></li>
                     <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Arragementer</a></li>
@@ -25,7 +25,7 @@
                     <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Bog tips</a></li>
                 </ul>
                 </li>
-                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Akutuelt</a>
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Akutuelt <i class="fas fa-chevron-down"></i></a>
                 <ul class="header__nav-menu-item-dropdown">
                     <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Skøn litteratur</a></li>
                     <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Fag litteratur</a></li>
@@ -35,7 +35,7 @@
                 <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Tilmelding</a>
                 
                 </li>
-                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Lånebørsen</a>
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Lånebørsen <i class="fas fa-chevron-down"></i></a>
                 <ul class="header__nav-menu-item-dropdown">
                     <li class="header__nav-menu-item-dropwdown-item"><a href="#" class="header__nav-menu-item-dropdown-item-link">Kontakt</a></li>
                 </ul>
