--- a/tilmelding.html
+++ b/tilmelding.html
@@ -12,7 +12,27 @@
     <title>Boghandleren</title>
 </head>
 <body>
+    <header>
 
+    </header>
+
+<main class="main">
+    <section class="main__tilmelding">
+        <form action="" class="main__tilmelding-form">
+            <h2 class="main__form-heading">Tilmeld klub Boghandleren</h2>
+            <input type="text" name="Fulde navn" id="" class="main__tilmelding-input" placeholder="Fulde Navn">
+            <input type="text" name="Adresse" id="" class="main__tilmelding-input" placeholder="Adresse">
+            <input type="text" name="By" id="" class="main__tilmelding-input" placeholder="By">
+            <input type="number" name="Post nr." id="" class="main__tilmelding-input" placeholder="Post Nr.">
+            <input type="email" name="E-mail" id="" class="main__tilmelding-input" placeholder="E-Mail">
+            <button class="main__tilmelding-btn">Book</button>
+        </form>
+        <figure class="main__tilmelding-fig">
+            <img src="content/images/Books_01.jpg" alt="" srcset="" class="main__tilmelding-img">
+        </figure>
+    </section>
+
+</main>
     <!-- Font Awesome Icon Script  -->
     <script src="https://kit.fontawesome.com/3ae7ff667f.js"></script>
 </body>
