--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Gruppe 2">
     <meta name="description" content="Boghandleren">
-
     <!-- Stylesheets -->
     <link rel="stylesheet" href="content/css/style.css">
     <title>Boghandleren</title>
@@ -70,8 +69,9 @@
         </nav>
     </header>
     <section class="section">
-        <video class="section__video" src="/bookstore/content/images/Bookcase.mp4" autoplay muted loop type="video/mp4"></video>
+        <video class="section__video" src="content/images/Bookcase.mp4" autoplay muted loop type="video/mp4"></video>
     </section>
+    <div style="width: 80%; margin: 0 auto;">
     <section>
         <div class="section__article">
             <figure class="section__article-fig">
@@ -87,7 +87,7 @@
             </figure>
 
             <figure class=" section__article-fig ">
-                <img class="section__article-post-img" src="/bookstore/content/images/Bookstore_Int_-1.jpg" alt="cafe">
+                <img class="section__article-post-img" src="content/images/Bookstore_Int_-1.jpg" alt="cafe">
 
                 <figcaption class="section__article-fig-figcap">
                     <h3>Bog klubben</h3>
@@ -122,13 +122,13 @@
 
             </figcaption>
             <figure class="content__article-fig-fig">
-                <img src="/bookstore/content/images/Books_02.jpg" alt="books">
+                <img src="content/images/Books_02.jpg" alt="books">
 
             </figure>
         </article>
 
     </section>
-
+</div>
 
     <!-- Font Awesome Icon Script  -->
     <script src="content/js/main.js"></script>
