--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="content/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <title>Boghandleren</title>
 </head>
 
@@ -79,7 +80,7 @@
     </section>
     <div style="width: 80%; margin: 0 auto;">
         <section>
-            <div class="section__article">
+            <article class="section__article">
                 <figure class="section__article-fig">
                     <img class="section__article-post-img" src="content/images/cafe-01.jpg" alt="cafe">
 
@@ -94,7 +95,11 @@
                         <p>Boghandleren skaffer de bøger, der skal læses, og den aktuelle bog kan afhentes og lånes på det pågældende bibliotek ca. en måned inden, den er på programmet i læsecaféen.</p>
                         </br>
                         <p><b><i>Det er gratis at deltage i læsecaféerne</i></b></p>
+                        <a href="">Læse mere</a>
                     </figcaption>
+                    <figure class="section__article-bottem">
+                        <img src="content/images/Bookstore_Int_01.jpg" alt="bookstore">
+                    </figure>
                 </figure>
 
                 <figure class=" section__article-fig ">
@@ -118,10 +123,10 @@
                         <p>Bogklubben: Eet år (12 bøger + arrangementer) 2200,-</p>
                         </br>
                         <p>Der afvikles min. 2 månedlige arrangementer.</p>
-
+                        <a href="">Læse mere</a>
                     </figcaption>
                 </figure>
-            </div>
+            </article>
         </section>
 
         <section class="content">
