small update, sort

--- a/books.html
+++ b/books.html
@@ -209,7 +209,8 @@
         </article>
         <section class="main__books-container">
             <div class="main__sort">
-                <p>Alle genre </p>
+                <p class="main__genre-text">Alle genre </p>
+                <div class="main__line"></div>
                 <button type="button" id="skoen" class="main__link">Skøn litteratur</button>
                 <button type="button" id="fag" class="main__link">Fag litteratur</button>
                 <button type="button" id="unge" class="main__link">Børn og unge</button>
