best books update

--- a/books.html
+++ b/books.html
@@ -205,7 +205,25 @@
     <!-- -------- -->
     <section class="main">
         <article class="main__best-books">
-            <h2>Månedens bøger</h2>
+            <h1>Månedens bøger</h1>
+            <article class="main__best-container">
+                <h2 class="main__best-text">#1</h2>
+                <figure class="main__best-fig">
+                    <img src="content/images/books/til_doeden.jpg" alt="book" class="main__best-img">
+                </figure>
+            </article>
+            <article class="main__best-container">
+                <h2 class="main__best-text">#2</h2>
+                <figure class="main__best-fig">
+                    <img src="content/images/books/hele_byen.jpg" alt="book" class="main__best-img">
+                </figure>
+            </article>
+            <article class="main__best-container">
+                <h2 class="main__best-text">#3</h2>
+                <figure class="main__best-fig">
+                    <img src="content/images/books/vejen.jpg" alt="book" class="main__best-img">
+                </figure>
+            </article>
         </article>
         <section class="main__books-container">
             <div class="main__sort">
