--- a/boghandleren.html
+++ b/boghandleren.html
@@ -110,8 +110,8 @@
                     <h3>Åbningstider</h3>
                 </section>
                 <section class="container-contact__txtdt">    
-                    <ul class="container-contact__text__days">
-                        <li class="container-contact__text__days_item">
+                    <ul class="container-contact__text-days">
+                        <li class="container-contact__text-days-item">
                             <b>Butikken</b>
                             <p> Mandag - Torsdag:</p>
                             <p> Fredag:</p>
@@ -131,7 +131,7 @@
                 </section>
                 <section class="container-contact__txtcdt">        
                     <ul class="container-contact__text-cdays">
-                        <li class="container-contact__text-cdays_item">
+                        <li class="container-contact__text-cdays-item">
                             <b>Bogklubben</b>
                             <p>Fredag - Lørdag: </p>
                             <p>Søndag: </p>
@@ -139,7 +139,7 @@
                         </li>
                     </ul>
                     <ul class="container-contact__text-ctimes">
-                        <li class="container-contact__text-ctimes_item">
+                        <li class="container-contact__text-ctimes-item">
                             <br>
                             <p>    20.00 - 23.00 </p>
                             <p>    10.00 - 14.00 </p>
@@ -167,7 +167,7 @@
 <br>
         <section class="mail">
             <form class="mail__form">
-                <h2 class="mail__Form-heading">SEND OS EN MAIL!</h2>
+                <h2 class="mail__form-heading">SEND OS EN MAIL!</h2>
                 <input type="text" id="name" class="mail__form-name" placeholder="Fulde navn"><br>
                 <input type="email" id="email" class="mail__form-email" placeholder="E-mail"><br>
                 <textarea class="mail__form-msg" id="msg" placeholder="Besked"></textarea><br>
