--- a/Popup.html
+++ b/Popup.html
@@ -14,10 +14,9 @@
 </head>
 
 <body>
-
-  <section class="popup">
-    <h2 class=" popup__headline"> Du er ved at book <span>Heroes</span></h2> <button onclick="openwindow()">Open Window</button>
-    <figure class="popup__img">
+ 
+  <section class="popup ">
+    <h2 class=" popup__headline"> Du er ved at book <span>Heroes</span></h2>
       <img src="/bookstore/content/images/poster_image_04.jpg" alt="" class="popup__fig-img ">
     </figure>
     <form class="popup-contact">
@@ -41,7 +40,7 @@
 
   <!-- Font Awesome Icon Script  -->
   <script src="https://kit.fontawesome.com/3ae7ff667f.js"></script>
- 
+
     
 </body>
 
