--- a/boghandleren.html
+++ b/boghandleren.html
@@ -65,7 +65,7 @@
                             class="header__nav-menu-item-dropdown-item-link">Børn og unge</a></li>
                 </ul>
             </li>
-            <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Tilmelding</a>
+            <li class="header__nav-menu-item"><a href="tilmelding.html" class="header__nav-menu-item-link">Tilmelding</a>
 
             </li>
             <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Lånebørsen <i
