--- a/books.html
+++ b/books.html
@@ -57,7 +57,7 @@
                                 class="header__nav-menu-item-dropdown-item-link">Bog tips</a></li>
                     </ul>
                 </li>
-                <li class="header__nav-menu-item"><a href="index.html" class="header__nav-menu-item-link">Akutuelt <i
+                <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Akutuelt <i
                             class="fas fa-chevron-down"></i></a>
                     <ul class="header__nav-menu-item-dropdown">
                         <li class="header__nav-menu-item-dropdown-item"><a href="books.html"
