--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section class="section">
         <video class="section__video" src="content/images/Bookcase.mp4" autoplay muted loop type="video/mp4">
 
-        </video>
+    </video>
 
         <h1>BOGHANDLEREN</h1>
 
@@ -82,56 +82,61 @@
         <section>
             <article class="section__article">
                 <figure class="section__article-fig">
-                    <img class="section__article-post-img" src="content/images/cafe-01.jpg" alt="cafe">
+                    <div class="section__article-fig-first">
+                        <img class="section__article-post-img" src="content/images/cafe-01.jpg" alt="cafe">
 
-                    <figcaption class="section__article-fig-figcap">
-                        <h3>Læse Café</h3>
-                        <p>Lad det bare være slået fast én gang for alle: Det er berigende at læse. Og endnu mere berigende bliver det, når læseoplevelsen deles med andre. Dét er der mange, der allerede har opdaget, og derfor inviterer Boghandleren hvert
-                            forår og efterår til Åbne Læsecaféer, hvor alle er velkomne til en snak om de udvalgte bøger og et glas vin fra egen import. </p>
-                        </br>
+                        <figcaption class="section__article-fig-figcap">
 
-                        <p><b>Sådan deltager du</b></p>
+                            <h3>Læse Café</h3>
+                            <p>Lad det bare være slået fast én gang for alle: Det er berigende at læse. Og endnu mere berigende bliver det, når læseoplevelsen deles med andre. Dét er der mange, der allerede har opdaget, og derfor inviterer Boghandleren hvert
+                                forår og efterår til Åbne Læsecaféer, hvor alle er velkomne til en snak om de udvalgte bøger og et glas vin fra egen import. </p>
+                            </br>
 
-                        <p>Boghandleren skaffer de bøger, der skal læses, og den aktuelle bog kan afhentes og lånes på det pågældende bibliotek ca. en måned inden, den er på programmet i læsecaféen.</p>
-                        </br>
-                        <p><b><i>Det er gratis at deltage i læsecaféerne</i></b></p>
-                        <a href="">Læse mere</a>
+                            <p><b>Sådan deltager du</b></p>
+
+                            <p>Boghandleren skaffer de bøger, der skal læses, og den aktuelle bog kan afhentes og lånes på det pågældende bibliotek ca. en måned inden, den er på programmet i læsecaféen.</p>
+                            </br>
+                            <p><b><i>Det er gratis at deltage i læsecaféerne</i></b></p>
+                            <a href="">Læse mere</a>
+                    </div>
                     </figcaption>
                     <figure class="section__article-bottem">
                         <img src="content/images/Bookstore_Int_01.jpg" alt="bookstore">
                     </figure>
                 </figure>
 
-                <figure class=" section__article-fig ">
-                    <img class="section__article-post-img" src="content/images/Bookstore_Int_-1.jpg" alt="cafe">
+                <figure class=" section__article-fig">
+                    <div class="section__article-fig-second">
+                        <img class="section__article-post-img " src="content/images/Bookstore_Int_-1.jpg " alt="cafe ">
 
-                    <figcaption class="section__article-fig-figcap">
-                        <h3>Bog klubben</h3>
-                        <p>Fylder litteraturen meget i dit liv? Elsker du kvalitetsbøger og det såkaldt smalle, skæve og litterære?</p>
-                        </br>
-                        <p>Så er Klub boghandleren sikkert noget for dig. Det er stedet, hvor du får tilbudt de bedste romaner fra kvalitetsforfattere fra ind- og udland. Vi tager os tid til at vælge den vigtigste aktuelle litteratur ud, så du kan blive
-                            opdateret på det, der rører sig, det vi samles om og debatterer. Du bliver præsenteret for litteratur, der bryder grænser, litteraturhistoriens mest betydningsfulde værker og faglitteratur der udfordrer. </p>
-                        </br>
-                        <p>Der findes folk, der beklager kvalitetslitteraturens ringe udbredelse. I Klub boghandleren forholder det sig anderledes. Gennem 40 år har Klub boghandleren været i stand til at efterleve sit slogan Et vindue ud mod verden. Her
-                            giver vi plads til den litteratur, der måske ikke ellers levnes så stor opmærksomhed, men som fortjener det. </p>
-                        </br>
-                        <p>Vi formidler kendskabet til verdenslitteraturen og giver dig masser af tips til de største læseoplevelser fra mindre profilerede forfatterskaber, der er værd at holde øje med. Så hvis du - som alle de 20.000 medlemmer i Klub boghandleren
-                            - er bog elsker og insisterer på at kvalitetslitteraturen skal støttes, læses og have en platform, er Klub boghandleren stedet for dig. </p>
-                        </br>
-                        <p><b>MEDLEMSKAB OG PRISER:</b></p>
-                        </br>
-                        <p>Bogklubben: Eet år (12 bøger + arrangementer) 2200,-</p>
-                        </br>
-                        <p>Der afvikles min. 2 månedlige arrangementer.</p>
-                        <a href="">Læse mere</a>
-                    </figcaption>
+                        <figcaption class="section__article-fig-figcap ">
+                            <h3>Bog klubben</h3>
+                            <p>Fylder litteraturen meget i dit liv? Elsker du kvalitetsbøger og det såkaldt smalle, skæve og litterære?</p>
+                            </br>
+                            <p>Så er Klub boghandleren sikkert noget for dig. Det er stedet, hvor du får tilbudt de bedste romaner fra kvalitetsforfattere fra ind- og udland. Vi tager os tid til at vælge den vigtigste aktuelle litteratur ud, så du kan blive
+                                opdateret på det, der rører sig, det vi samles om og debatterer. Du bliver præsenteret for litteratur, der bryder grænser, litteraturhistoriens mest betydningsfulde værker og faglitteratur der udfordrer. </p>
+                            </br>
+                            <p>Der findes folk, der beklager kvalitetslitteraturens ringe udbredelse. I Klub boghandleren forholder det sig anderledes. Gennem 40 år har Klub boghandleren været i stand til at efterleve sit slogan Et vindue ud mod verden.
+                                Her giver vi plads til den litteratur, der måske ikke ellers levnes så stor opmærksomhed, men som fortjener det. </p>
+                            </br>
+                            <p>Vi formidler kendskabet til verdenslitteraturen og giver dig masser af tips til de største læseoplevelser fra mindre profilerede forfatterskaber, der er værd at holde øje med. Så hvis du - som alle de 20.000 medlemmer i Klub
+                                boghandleren - er bog elsker og insisterer på at kvalitetslitteraturen skal støttes, læses og have en platform, er Klub boghandleren stedet for dig. </p>
+                            </br>
+                            <p><b>MEDLEMSKAB OG PRISER:</b></p>
+                            </br>
+                            <p>Bogklubben: Eet år (12 bøger + arrangementer) 2200,-</p>
+                            </br>
+                            <p>Der afvikles min. 2 månedlige arrangementer.</p>
+                            <a href=" ">Læse mere</a>
+                        </figcaption>
+                    </div>
                 </figure>
             </article>
         </section>
 
-        <section class="content">
+        <section class="content ">
             <article class="content__article">
-                <figcaption class="content__article-figcap">
+                <figcaption class="content__article-figcap ">
                     <h3>Lånebørsen</h3>
                     <p>Vi brænder for bøger, og anbefaler dig gerne din næste læseoplevelse. </p>
                     </br>
@@ -139,29 +144,29 @@
                         forfattere. Hver eneste dag arbejder vi på at lægge de rette bøger i de rette hænder. Vi læser selv mange af bøgerne, og er altid klar på at anbefale en god læseoplevelse til dig.</p>
 
                 </figcaption>
-                <figure class="content__article-fig-fig">
-                    <img src="content/images/Books_02.jpg" alt="books">
+                <figure class="content__article-fig-fig ">
+                    <img src="content/images/Books_02.jpg " alt="books ">
 
                 </figure>
             </article>
 
         </section>
     </div>
-    <footer class="footer">
-        <div class="footer__content">
-            <div class="footer__content-button"><a href="">FIND BUTIK</a></div>
-            <div class="footer__content-button"><a href="">KUNDESERVICE</a></div>
-            <div class="footer__content-button"><a href="">OM BOGHANDLEREN</a></div>
-            <div class="footer__content-button"><a href="">TILMELD KLUB BOGHANDLEREN</a></div>
+    <footer class="footer ">
+        <div class="footer__content ">
+            <div class="footer__content-button "><a href=" ">FIND BUTIK</a></div>
+            <div class="footer__content-button "><a href=" ">KUNDESERVICE</a></div>
+            <div class="footer__content-button "><a href=" ">OM BOGHANDLEREN</a></div>
+            <div class="footer__content-button "><a href=" ">TILMELD KLUB BOGHANDLEREN</a></div>
 
         </div>
-        <div class="footer__text">
+        <div class="footer__text ">
             <p>&copy;Copyright 2019 Boghandleren</p>
         </div>
     </footer>
 
     <!-- Font Awesome Icon Script  -->
-    <script src="content/js/main.js"></script>
+    <script src="content/js/main.js "></script>
     <script src="https://kit.fontawesome.com/3ae7ff667f.js "></script>
 </body>
 
