--- a/tilmelding.html
+++ b/tilmelding.html
@@ -15,12 +15,12 @@
     <header class="header">
             <section class="header__strip">
                 <ul class="header__menu">
-                    <li class="header-strip-item"><a class="header__strip-dropdown" href="index.html">Gennemse kategorier <i
+                    <li class="header-strip-item"><a class="header__strip-dropdown" href="books.html">Gennemse kategorier <i
                                 class="fas fa-chevron-down"></i></a>
                         <ul class="header__dropdown">
-                            <li class="header__list"><a class="header__list-link" href="#">Skøn litteratur</a></li>
-                            <li class="header__list"><a class="header__list-link" href="#">Fag litteratur</a></li>
-                            <li class="header__list"><a class="header__list-link" href="#">Børn og unge</a></li>
+                            <li class="header__list"><a class="header__list-link" href="books.html">Skøn litteratur</a></li>
+                            <li class="header__list"><a class="header__list-link" href="books.html">Fag litteratur</a></li>
+                            <li class="header__list"><a class="header__list-link" href="books.html">Børn og unge</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -37,41 +37,42 @@
             </section>
             <nav class="header__nav" id="rightMenu">
                 <i id="rightMenuBtnClose" class="header__nav-arrow fas fa-arrow-right"></i>
-                <img class="header__nav-logo" draggable="false" src="content/images/logo.svg" alt="boghandlerens logo">
+                <a href="index.html" class="header__nav-logo"><img draggable="false" src="content/images/logo.svg" alt="boghandlerens logo"></a>
+                
                 <ul class="header__nav-menu">
-                    <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Om Boghandleren</a>
+                    <li class="header__nav-menu-item"><a href="boghandleren.html" class="header__nav-menu-item-link">Om Boghandleren</a>
                     </li>
-                    <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Bogklubben<i
+                    <li class="header__nav-menu-item"><a href="tilmelding.html" class="header__nav-menu-item-link">Bogklubben<i
                                 class="fas fa-chevron-down"></i></a>
                         <ul class="header__nav-menu-item-dropdown">
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="tilmelding.html"
                                     class="header__nav-menu-item-dropdown-item-link">Nyheder</a></li>
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="tilmelding.html"
                                     class="header__nav-menu-item-dropdown-item-link">Arragementer</a></li>
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="tilmelding.html"
                                     class="header__nav-menu-item-dropdown-item-link">Månedens bog</a></li>
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="tilmelding.html"
                                     class="header__nav-menu-item-dropdown-item-link">Bog tips</a></li>
                         </ul>
                     </li>
                     <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Akutuelt <i
                                 class="fas fa-chevron-down"></i></a>
                         <ul class="header__nav-menu-item-dropdown">
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="books.html"
                                     class="header__nav-menu-item-dropdown-item-link">Skøn litteratur</a></li>
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="books.html"
                                     class="header__nav-menu-item-dropdown-item-link">Fag litteratur</a></li>
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="books.html"
                                     class="header__nav-menu-item-dropdown-item-link">Børn og unge</a></li>
                         </ul>
                     </li>
-                    <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Tilmelding</a>
+                    <li class="header__nav-menu-item"><a href="tilmelding.html" class="header__nav-menu-item-link">Tilmelding</a>
         
                     </li>
-                    <li class="header__nav-menu-item"><a href="#" class="header__nav-menu-item-link">Lånebørsen <i
+                    <li class="header__nav-menu-item"><a href="books.html" class="header__nav-menu-item-link">Lånebørsen <i
                                 class="fas fa-chevron-down"></i></a>
                         <ul class="header__nav-menu-item-dropdown">
-                            <li class="header__nav-menu-item-dropdown-item"><a href="#"
+                            <li class="header__nav-menu-item-dropdown-item"><a href="boghandleren.html"
                                     class="header__nav-menu-item-dropdown-item-link">Kontakt</a></li>
                         </ul>
                     </li>
