--- a/boghandleren.html
+++ b/boghandleren.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Boghandleren">
     
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="content/css/style.css">
+    <link rel="stylesheet" href="content/css/styles.css">
     <title>Boghandleren</title>
 </head>
 <body>
