--- a/books.html
+++ b/books.html
@@ -406,6 +406,18 @@
       </section>
     </div>
 </div>
+<footer class="footer ">
+    <div class="footer__content ">
+        <div class="footer__content-button "><a href=" ">FIND BUTIK</a></div>
+        <div class="footer__content-button "><a href=" ">KUNDESERVICE</a></div>
+        <div class="footer__content-button "><a href=" ">OM BOGHANDLEREN</a></div>
+        <div class="footer__content-button "><a href=" ">TILMELD KLUB BOGHANDLEREN</a></div>
+
+    </div>
+    <div class="footer__text ">
+        <p>&copy;Copyright 2019 Boghandleren</p>
+    </div>
+</footer>
     <!-- Font Awesome Icon Script  -->
     <script src="content/js/main.js"></script>
     <script src="https://kit.fontawesome.com/3ae7ff667f.js"></script>
