--- a/books.html
+++ b/books.html
@@ -106,7 +106,7 @@
                         “100 års ensomhed” er en roman, der handler om hvordan to unge mennesker skaber en fiktiv og
                         isoleret latinamerikansk...
                     </p>
-                    <button class="slider__button" type="button">book den her bog</button>
+                    <button class="slider__button" type="button">Book denne bog</button>
                 </div>
             </article>
             <article class="slider__box">
@@ -125,7 +125,7 @@
                     <p class="slider__text">
                         Biblen over alle bibler for lystfiskere. En hyldest til naturen i almindelighed og til lystfiskeri i særdeleshed med forord af Uffe Ellemann-Jensen og efterskrift af Kjeld Hillingsø. Illustreret med Ib Andersens smukke vignetter...
                     </p>
-                    <button class="slider__button" type="button">book den her bog</button>
+                    <button class="slider__button" type="button">Book denne bog</button>
                 </div>
             </article>
             <article class="slider__box">
@@ -144,7 +144,7 @@
                     <p class="slider__text">
                         "Hele byen ved det" handler om Tommy, der vil gøre alt for at få hævn på sin chef og vælger at afsløre hende i utroskab. Det første anonyme brev bliver til det næste, og alle han kender, der har bedraget deres ægtefæller eller kærester står for skud...
                     </p>
-                    <button class="slider__button" type="button">book den her bog</button>
+                    <button class="slider__button" type="button">Book denne bog</button>
                 </div>
             </article>
             <article class="slider__box">
@@ -163,7 +163,7 @@
                     <p class="slider__text">
                         Jake og Alice modtager til deres bryllup en mystisk gave: En invitation til en eksklusiv klub, hvor alle medlemmer følger nogle enkle regler – for at passe godt på ægteskabet. Og hvilke nygifte vil ikke gerne det? Klubben kalder...
                     </p>
-                    <button class="slider__button" type="button">book den her bog</button>
+                    <button class="slider__button" type="button">Book denne bog</button>
                 </div>
             </article>
             <article class="slider__box">
@@ -182,7 +182,7 @@
                     <p class="slider__text">
                         Frantz Schrum og hans kolleger har slidt mange tusinde kilometer asfaldt fra Danmark til det gamle Østeuropa og videre ud i Mellemøstens store sandkasse fra Syrien og Jordan til det daværende Persien, Bagdad, Riyadh og Saudi Arabien. Mens den...
                     </p>
-                    <button class="slider__button" type="button">book den her bog</button>
+                    <button class="slider__button" type="button">Book denne bog</button>
                 </div>
             </article>
         </div>
@@ -237,7 +237,7 @@
                         <p class="main__text">
                             100 års ensomhed er den fabulerende farverige og fantastiske krønike om den ensomt beliggende landsby Macondo og dens store Buendia-slægt med dens mangfoldige skæbner...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
 
@@ -257,7 +257,7 @@
                         <p class="main__text">
                             Biblen over alle bibler for lystfiskere. En hyldest til naturen i almindelighed og til lystfiskeri i særdeleshed med forord af Uffe Ellemann-Jensen og efterskrift af Kjeld Hillingsø.  Illustreret med Ib Andersens smukke vignetter...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
 
@@ -277,7 +277,7 @@
                         <p class="main__text">
                             DEN ÅBNE SKOLE rummer et meget stort potentiale for autentisk og problembaseret læring gennem inddragelse af virksomheder og andre samfundsaktører. Det kræver dog en stor indsats at få forskellige...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
 
@@ -297,7 +297,7 @@
                         <p class="main__text">
                             "Hele byen ved det" handler om Tommy, der vil gøre alt for at få hævn på sin chef og vælger at afsløre hende i utroskab. Det første anonyme brev bliver til det næste, og alle han kender, der har bedraget deres ægtefæller eller kærester står for skud...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
 
@@ -317,7 +317,7 @@
                         <p class="main__text">
                             Jake og Alice modtager til deres bryllup en mystisk gave: En invitation til en eksklusiv klub, hvor alle medlemmer følger nogle enkle regler – for at passe godt på ægteskabet. Og hvilke nygifte vil ikke gerne det? Klubben kalder...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
 
@@ -337,7 +337,7 @@
                         <p class="main__text">
                             Danmarkshistorien går 128.000 år tilbage og er både spændende og fantastisk! Med "Sigurd fortæller Danmarkshistorie" får alle børn mellem 6 og 12 år den ultimative historiebog!...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
 
@@ -357,7 +357,7 @@
                         <p class="main__text">
                             For første gang på dansk behandles i denne bog myndighedsrådgiveres arbejde med børn og unge, der er diagnosticeret med autismespektrumforstyrrelser eller ADHD. Bogen belyser myndighedsarbejdet på handicapområdet ud fra...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
 
@@ -377,7 +377,7 @@
                         <p class="main__text">
                             Historien følger Elliott fra den dag, han finder E.T. og tager ham med hjem. Det er ikke sådan helt nemt at skjule et rumvæsen for sine forældre eller de slemme mænd, som vil fange E.T. Men der opstår en helt speciel forbindelse mellem Elliott...
                         </p>
-                        <button class="main__button" type="button">book den her bog</button>
+                        <button class="main__button" type="button">Book denne bog</button>
                     </div>
                 </article>
             </section>
