--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h1>BOGHANDLEREN</h1>
 
     </section>
-    <div style="width: 80%; margin: 0 auto;">
+    <div class="container">
         <section>
             <article class="section__article">
                 <figure class="section__article-fig">
@@ -108,7 +108,7 @@
                             <p>Boghandleren skaffer de bøger, der skal læses, og den aktuelle bog kan afhentes og lånes på det pågældende bibliotek ca. en måned inden, den er på programmet i læsecaféen.</p>
                             </br>
                             <p><b><i>Det er gratis at deltage i læsecaféerne</i></b></p>
-                            <a href="">Læse mere</a>
+                            <a href="tilmelding.html">Læs mere</a>
                     </div>
                     </figcaption>
                     <figure class="section__article-bottem">
@@ -138,7 +138,7 @@
                             <p>Bogklubben: Eet år (12 bøger + arrangementer) 2200,-</p>
                             </br>
                             <p>Der afvikles min. 2 månedlige arrangementer.</p>
-                            <a href=" ">Læse mere</a>
+                            <a href="tilmelding.html">Læs mere</a>
                         </figcaption>
                     </div>
                 </figure>
