--- a/tilmelding.html
+++ b/tilmelding.html
@@ -24,7 +24,7 @@
                         </ul>
                     </li>
                 </ul>
-                <img class="header__strip-logo" draggable="false" src="content/images/logo.svg" alt="boghandlerens logo">
+                <a href="index.html" class="header__strip-logo"><img draggable="false" src="content/images/logo.svg" alt="boghandlerens logo">                </a>
                 <div class="header__strip-mobile-tab" id="rightMenuBtn">
                     <div class="header__strip-mobile-tab-container">
                         <span class="header__strip-mobile-tab-container-lines"></span>
